[package]
name = "plannerguts"
version = "0.1.0"
authors = ["echo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
objects = {path = "../objects"}
display = {path = "../display"}
shared_parser = {path = "../shared_parser"}


